--- a/docker/kafka/001-kafka-zookeeper/.env.zookeeper
+++ b/docker/kafka/001-kafka-zookeeper/.env.zookeeper
@@ -1,4 +1,4 @@
 # ZOO_MY_ID=1 
 # ZOO_SERVERS="server.1=zoo1:2888:3888;2181"
-ZOOKEEPER_CLIENT_PORT: 2181
-ZOOKEEPER_TICK_TIME: 2000
+ZOOKEEPER_CLIENT_PORT=2181
+ZOOKEEPER_TICK_TIME=2000
