--- a/docker/spark/docker-compose.yml
+++ b/docker/spark/docker-compose.yml
@@ -5,12 +5,17 @@ version: "3"
 services:
   
   spark-master:
-    image: bitnami/spark:latest
+    image: bitnami/spark:3.5
     container_name: spark-master
     hostname: spark-master
     environment:
       - SPARK_MODE=master
-      - SPARK_MASTER_HOST=spark-master
+      # - SPARK_MASTER_HOST=spark-master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
     ports:
       - "8080:8080" # interfaccia web del master
       - "7077:7077" # porta per la comunicazione tra nodi spark
@@ -18,12 +23,19 @@ services:
       - net-spark
 
   spark-worker-1:
-    image: bitnami/spark:latest
+    image: bitnami/spark:3.5
     container_name: spark-worker-1
     hostname: spark-worker-1
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
     ports:
       - "8081:8081" # interfaccia web del worker
     networks:
@@ -31,24 +43,38 @@ services:
 
     
   spark-worker-2:
-    image: bitnami/spark:latest
+    image: bitnami/spark:3.5
     container_name: spark-worker-2
     hostname: spark-worker-2
     environment:
       - SPARK_MODE=worker
-      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_MASTER_URL=spark://spark-master:7077    
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark  
     ports:
       - "8082:8081" # interfaccia web del worker
     networks:
       - net-spark
 
   spark-worker-3:
-    image: bitnami/spark:latest
+    image: bitnami/spark:3.5
     container_name: spark-worker-3
     hostname: spark-worker-3
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+      - SPARK_USER=spark
     ports:
       - "8083:8081" # interfaccia web del worker
     networks:
